--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <link href="./../css/style.css" rel="stylesheet"/>
-        <title>Wunderwebseite</title>
+        <title>Wunder Welt Wissen</title>
         </head>
     <body>
         <div class="container">
